manifests/dev/mediamanager/Namespace-mediamanager.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: mediamanager
