manifests/dev/mediamanager/Deployment-mediamanager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: mediamanager
    app.kubernetes.io/name: mediamanager
  name: mediamanager
  namespace: mediamanager
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: mediamanager
      app.kubernetes.io/name: mediamanager
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: mediamanager
        app.kubernetes.io/name: mediamanager
    spec:
      containers:
        - env:
            - name: CONFIG_DIR
              value: /app/config
            - name: MEDIAMANAGER_DATABASE__HOST
              value: postgresql.postgresql
            - name: MEDIAMANAGER_DATABASE__PORT
              value: "5432"
            - name: MEDIAMANAGER_DATABASE__USER
              value: mediamanager
            - name: MEDIAMANAGER_DATABASE__DBNAME
              value: mediamanager
            - name: MEDIAMANAGER_DATABASE__PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: mediamanager-database
            - name: MEDIAMANAGER_AUTH__TOKEN_SECRET
              valueFrom:
                secretKeyRef:
                  key: tokenSecret
                  name: mediamanager-auth
          image: quay.io/maxdorninger/mediamanager:1.12.3
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/v1/health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
          name: mediamanager
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 6
            httpGet:
              path: /api/v1/health
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /app/config
              name: config
            - mountPath: /app/config/config.toml
              name: config-file
              subPath: config.toml
            - mountPath: /data/images
              name: images
            - mountPath: /data/tv
              name: tv
            - mountPath: /data/movies
              name: movies
            - mountPath: /data/torrents
              name: torrents
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsUser: 1000
      serviceAccountName: default
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: mediamanager-mediamanager-config
        - configMap:
            name: mediamanager
          name: config-file
        - name: images
          persistentVolumeClaim:
            claimName: mediamanager-mediamanager-images
        - name: tv
          persistentVolumeClaim:
            claimName: mediamanager-mediamanager-tv
        - name: movies
          persistentVolumeClaim:
            claimName: mediamanager-mediamanager-movies
        - name: torrents
          persistentVolumeClaim:
            claimName: mediamanager-mediamanager-torrents
