manifests/dev/mediamanager/Service-mediamanager.yaml
apiVersion: v1
kind: Service
metadata:
  name: mediamanager
  namespace: mediamanager
spec:
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: mediamanager
    app.kubernetes.io/name: mediamanager
  type: ClusterIP
