manifests/dev/mediamanager/Ingress-mediamanager.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: mediamanager
  namespace: mediamanager
spec:
  ingressClassName: traefik
  rules:
    - host: mediamanager.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: mediamanager
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - mediamanager.home.kronkltd.net
      secretName: mediamanager-tls
